update dark mode and fixed features

--- a/src/input.css
+++ b/src/input.css
@@ -9,13 +9,12 @@ body {
 }
 
 .navbar-fixed {
-    @apply fixed z-[9999] bg-white bg-opacity-70;
-    backdrop-filter: blur(4px);
+    @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
     box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .hamburger-line {
-    @apply w-[30px] h-[2px] my-2 block bg-dark rounded-full;
+    @apply w-[30px] h-[2px] my-2 block bg-dark rounded-full dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
@@ -41,5 +40,10 @@ body {
   }
   
   .animate-fadeIn {
-    animation: fadeIn 2s ease-in forwards;
+    animation: fadeIn 1s ease-in forwards;
   }
+
+  #dark-toggle:checked ~ label div.toggle-circle {
+    @apply translate-x-3;
+  }
+
